--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -16,6 +16,7 @@
     <meta property="og:image" content="comportemental.jpg">
     <meta property="og:description" content="Ekolo[geek] propose un accompagnement sur 6 mois et des ateliers pratiques aux entreprises de la métropole pour diminuer leurs déchets de fonctionnement, les inscriptions sont ouvertes">
     <meta property="og:site_name" content="Défi Zéro Déchet des Pros"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_pack_tag 'application', media: 'all' %>
