--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -70,12 +70,17 @@
 
     <hr/>
     <div>
-
-      <h2 class="green-bg my-4">Actu</h2>
+      <h2 class="green-bg my-4">Actualités</h2>
     </div>
-    <%= link_to "Plus d'actu ", articles_path, class:"btn btn-primary" %>
-    <div>
-      <%= render "articles/preview", articles: @articles %>
+    <div class="row">
+      <div class="col-12 col-lg-6 offset-lg-3">
+        <div>
+          <div class="d-flex flex-column">
+            <%= render "articles/preview", articles: @articles %>
+          </div>
+          <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary mb-3" %>
+        </div>
+      </div>
     </div>
 
     <h2 class="my-5 header text-primary text-center">PARTENAIRES</h2>
