--- a/app/views/topics/_preview.html.erb
+++ b/app/views/topics/_preview.html.erb
@@ -1,11 +1,12 @@
 <% topics.each do |topic| %>
   <%= link_to topic_path(topic) do %>
-    <div class="card w-100 m-2">
-      <div class="card-body">
-        <div class="d-md-flex d-flex-column justify-content-between align-items-center">
-          <p class="card-text"><%= topic.content %></p>
+    <div class="card card-topic mb-3 h-100">
+      <div class="card-body-topic pt-2 d-flex align-items-center justify-content-between">
+        <%= cl_image_tag topic.cover, height: 50, width: 50, crop: :fill, class:"m-2" %>
+        <div class="d-flex align-items-center justify-content-between card-content-topic">
+          <p class=" card-text-topic flex-grow"><%= topic.content.truncate_words(15, omission: '...') %></p>
           <% if topic.mine?(current_user) %>
-            <div class="topic-links">
+            <div class="card-topic-links mr-2">
               <%= link_to "Modifier", edit_topic_path(topic), class:"btn cool-link" %>
               <%= link_to "Supprimer", topic_path(topic), method: :delete, class:"btn cool-link" %>
             </div>
