--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -115,7 +115,7 @@
             <div>
               <h2 class="green-bg my-4">Forum</h2>
             </div>
-            <%= link_to "Plus de thème", topics_path, class:"btn btn-primary mb-3" %>
+            <%= link_to "Plus de thèmes", topics_path, class:"btn btn-primary mb-3" %>
             <div class="d-flex flex-column">
               <%= render "topics/preview", topics: @topics %>
             </div>
