--- a/app/views/pages/agenda.html.erb
+++ b/app/views/pages/agenda.html.erb
@@ -1,4 +1,6 @@
 <div class="wrapper mt-5">
-  <iframe src="https://www.billetweb.fr/multi_event.php?user=37189#shop" width="100%" height="500" frameborder="0"></iframe>
+  <div class="h-100">
+    <iframe src="https://www.billetweb.fr/multi_event.php?user=37189#shop" width="100%" height="500" frameborder="0"></iframe>
+  </div>
 </div>
 
