--- a/app/views/pages/documents.html.erb
+++ b/app/views/pages/documents.html.erb
@@ -1,4 +1,4 @@
 <div class="wrapper mt-5">
-  <p><iframe src="https://drive.google.com/embeddedfolderview?id=17i-ruMNRs1u0KkALTVmV1_4uadurxvt9#list" width="100%" height="500" frameborder="0"></iframe>
-  </p>
+  <div class="h-100"><iframe src="https://drive.google.com/embeddedfolderview?id=17i-ruMNRs1u0KkALTVmV1_4uadurxvt9#list" width="100%" height="500" frameborder="0"></iframe>
+  </div>
 </div>
