--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -3,12 +3,26 @@
     <div class="container-ekologeek bg-white my-5 px-5 py-2">
       <h2 class="mt-5 mb-4 green-bg">Discussion</h2>
       <%= link_to "Retour", topics_path, class:"btn btn-link" %>
-      <h5>Question : <b><%= @topic.content %></b></h5>
-      <%= cl_image_tag @topic.cover, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
-      <div id="answers">
-        <% @topic.answers.each do |answer| %>
+      <div class="topic-card card">
+        <div class="topic-card-name d-flex justify-content-between align-items-center">
+          <div>
+            <b><%= @topic.user.last_name.upcase %></b> <span class="name m-0"><%= @topic.user.first_name.capitalize %></span>
+            <p>Structure : <%= @topic.user.company.name %></p>
+          </div>
+          <div >
+            <div class="time"> <em>publié il y a</em> <b><%= time_ago_in_words @topic.created_at %></b></div>
+            <div class="time"><b><%= @topic.answers.count %></b> <em>commentaires</em> </div>
+          </div>
+        </div>
+        <div class="text-center">
+          <h5 class="my-5"><b><%= @topic.content %></b></h5>
+        </div>
+        <%= cl_image_tag @topic.cover, width: 400, height: 300, crop: :scale, class: "card-img-top topic-photo-card" %>
+        <div id="answers">
+          <% @topic.answers.each do |answer| %>
           <%= render 'answers/show', answer: answer %>
-        <% end %>
+          <% end %>
+        </div>
       </div>
       <%= render 'answers/form', topic: @topic, answer: @answer %>
     </div>
