--- a/app/views/articles/_preview.html.erb
+++ b/app/views/articles/_preview.html.erb
@@ -1,18 +1,11 @@
-<div>
+<div class="article-index">
   <% articles.each do |article| %>
-    <div class="article">
+    <div class="article-border-bottom">
       <%= link_to article_path(article) do %>
-        <div class="card mb-3 h-100">
-          <div class="card-body pt-2 py-2">
-            <h4 class="card-title mb-1"><%= article.title %></h4>
-            <em class="card-text text-muted mb-2"><%= article.subtitle.truncate_words(15, omission: '...') %></em>
-            <div class="counts d-flex justify-content-between align-items-center">
-              <%= link_to "voir plus", article_path(article), class:"btn btn-link" %>
-              <div class="d-flex align-items-center">
-                <p class="mx-3 text-muted"><%= pluralize(article.comments.count, "commentaire", "commentaires") %></p>
-                <%= article.likes.count%><i class="fas fa-heart red ml-2"></i>
-              </div>
-            </div>
+        <div class="h-100">
+          <div class="card-article-body pt-2 py-2">
+            <h6 class="card-article-title mb-1"><b><%= article.title.upcase.truncate_words(8, omission: '...') %></b></h6>
+            <p class="card-article-text text-muted mb-0"><%= article.subtitle.truncate_words(15, omission: '...') %></p>
           </div>
         </div>
       <% end %>
