--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -104,9 +104,11 @@
             <div>
               <h2 class="green-bg my-4">Actualités</h2>
             </div>
-            <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary mb-3" %>
             <div class="d-flex flex-column">
               <%= render "articles/preview", articles: @articles %>
+            </div>
+            <div class="text-center">
+              <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary my-3" %>
             </div>
           </div>
         </div>
@@ -115,9 +117,11 @@
             <div>
               <h2 class="green-bg my-4">Forum</h2>
             </div>
-            <%= link_to "Plus de sujets", topics_path, class:"btn btn-primary mb-3" %>
-            <div class="d-flex flex-column">
+            <div class="topics d-flex flex-column">
               <%= render "topics/preview", topics: @topics %>
+            </div>
+            <div class="text-center">
+              <%= link_to "Plus de sujets", topics_path, class:"btn btn-primary my-3" %>
             </div>
           </div>
         </div>
