--- a/app/views/topics/_preview.html.erb
+++ b/app/views/topics/_preview.html.erb
@@ -1,16 +1,16 @@
 <% topics.each do |topic| %>
   <%= link_to topic_path(topic) do %>
-    <div class="card card-topic mb-3 h-100">
-      <div class="card-body-topic pt-2 d-flex align-items-center justify-content-between">
-        <%= cl_image_tag topic.cover, height: 50, width: 50, crop: :fill, class:"m-2" %>
+    <div class="topic-index mb-1 h-100">
+      <div class="pt-2 d-flex align-items-center justify-content-between">
+        <div class="topic-index-info">
+          <div>
+            <span class="name m-0"> <b><%= "#{topic.user.first_name.capitalize} #{topic.user.last_name.upcase}".truncate(18, omission: '...') %> </b></span>
+          </div>
+          <span class="topic-index-time"><%= time_ago_in_words topic.created_at %>, <%= topic.user.company.name %></span>
+          <div class="topic-index-time"><i class="fas fa-comment-alt mr-1"></i><%= topic.answers.count %></div>
+        </div>
         <div class="d-flex align-items-center justify-content-between card-content-topic">
-          <p class=" card-text-topic flex-grow"><%= topic.content.truncate_words(15, omission: '...') %></p>
-          <% if topic.mine?(current_user) %>
-            <div class="card-topic-links mr-2">
-              <%= link_to "Modifier", edit_topic_path(topic), class:"btn cool-link" %>
-              <%= link_to "Supprimer", topic_path(topic), method: :delete, class:"btn cool-link" %>
-            </div>
-          <% end %>
+          <p class=" topic-index-text flex-grow text-muted"><%= topic.content.truncate_words(15, omission: '...') %></p>
         </div>
       </div>
     </div>
