--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -24,6 +24,11 @@
   }
 }
 
+.light-border {
+  border: 1px solid rgb(200, 200, 200);
+  border-radius: 3px;
+}
+
 .down {
   @media only screen
   and (max-width: $mobile)
