--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -127,7 +127,7 @@
         </div>
         <div class="col-12 col-lg-6">
           <h2 class="green-bg my-4">Agenda</h2>
-          <iframe src="https://www.billetweb.fr/multi_event.php?user=37189#shop" width="100%" height="500" frameborder="1"></iframe>
+          <iframe src="https://www.billetweb.fr/multi_event.php?user=37189#shop" width="100%" height="500" frameborder="0" class="light-border"></iframe>
           <div class="text-center mt-3">
             <%= link_to "Plus d'événements", "https://www.billetweb.fr/multi_event.php?user=37189#shop", target: :blank, class:"btn btn-primary mb-3" %>
           </div>
@@ -135,7 +135,7 @@
 
         <div class="col-12 col-lg-6">
           <h2 class="green-bg my-4">Documents</h2>
-          <iframe src="https://drive.google.com/embeddedfolderview?id=17i-ruMNRs1u0KkALTVmV1_4uadurxvt9#list" width="100%" height="500" frameborder="1"></iframe>
+          <iframe src="https://drive.google.com/embeddedfolderview?id=17i-ruMNRs1u0KkALTVmV1_4uadurxvt9#list" width="100%" height="500" frameborder="0" class="light-border"></iframe>
           <div class="text-center mt-3">
             <%= link_to "Ouvrir dans un nouvel onglet", "https://drive.google.com/embeddedfolderview?id=17i-ruMNRs1u0KkALTVmV1_4uadurxvt9#list", target: :blank, class:"btn btn-primary mb-3" %>
           </div>
