--- a/app/views/charts/show.js.erb
+++ b/app/views/charts/show.js.erb
@@ -5,7 +5,7 @@ valuesSpace.innerHTML = values;
 
 Highcharts.chart('companychart', {
   chart: {
-    type: 'xrange',
+    type: 'line',
     styledMode: true
   },
   title: {
