--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -151,32 +151,31 @@
     var adminChartDisplay = document.getElementById("adminchart");
     if (adminChartDisplay) {
       Highcharts.chart('adminchart', {
-        chart: {
-          type: 'line',
-          styledMode: true
-        },
+      chart: {
+        type: 'line',
+        styledMode: true
+      },
+      title: {
+        text: ''
+      },
+      xAxis: {
+        type: 'datetime'
+      },
+      yAxis: {
         title: {
-          text: ''
-        },
-        xAxis: {
-          type: 'datetime'
-        },
-        yAxis: {
-          title: {
-            text: 'Kg / collaborateur·rice / jour moyen'
-          }
-        },
-        tooltip: {
-          shared: true,
-          useHTML: true,
-          // headerFormat: '<small>{point.key}</small><table>',
-          pointFormat: '<tr><td style="color: {series.color}"><b>{series.name}</b> / </td>' +
-              '<tr><td style="text-align: right">{point.type} : </td></tr>' +
-              '<td style="text-align: right">{point.y} Kg/personne/jour </td></tr>',
-          footerFormat: '</table>',
-          valueDecimals: 2
-        },
-        series: JSON.parse(adminChartDisplay.dataset.series)
+          text: 'Kg / collaborateur·rice / jour moyen'
+        }
+      },
+      tooltip: {
+        shared: true,
+        useHTML: true,
+        // headerFormat: '<small>{point.key}</small><table>',
+        pointFormat: '<tr><td style="color: {series.color}"><b>{series.name}</b>: </td>' +
+            '<td style="text-align: right">{point.y} Kg/personne/jour </td></tr>',
+        footerFormat: '</table>',
+        valueDecimals: 2
+      },
+      series: JSON.parse(adminChartDisplay.dataset.series)
       });
     }
 
