--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -29,6 +29,10 @@
   border-radius: 3px;
 }
 
+.rounded-frame {
+  border-radius: 5px;
+}
+
 .down {
   @media only screen
   and (max-width: $mobile)
