--- a/app/views/pages/agenda.html.erb
+++ b/app/views/pages/agenda.html.erb
@@ -1,6 +1,9 @@
 <div class="wrapper mt-5">
-  <div class="h-100">
-    <iframe src="https://www.billetweb.fr/multi_event.php?user=37189#shop" width="100%" height="500" frameborder="0"></iframe>
+  <div class="container">
+    <h1 class="header text-primary pt-5 text-center">AGENDA</h1>
+    <div class="h-100">
+      <iframe src="https://www.billetweb.fr/multi_event.php?user=37189#shop" width="100%" height="500" frameborder="0" class="light-border"></iframe>
+    </div>
   </div>
 </div>
 
