--- a/app/stylesheets/components/_tag.scss
+++ b/app/stylesheets/components/_tag.scss
@@ -1,16 +1,16 @@
 .tag {
-  background-color: white;
-  color: rgb(50, 50, 50);
+  background-color: $blue;
+  color: white;
   text-decoration: none;
-  padding: 8px 12px;
-  border-radius: 3px;
-  border: 1px solid rgba(51, 51, 51, .125);
+  padding: 0px 6px;
+  border-radius: 16px;
+  font-weight: light;
 
   &:hover {
-    background-color: rgb(240, 240, 240);
     text-decoration: none;
-    color: black;
+    color: white;
     transition: 0.5s;
+    background-color: #008aa7;
   }
 }
 
