--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -78,7 +78,9 @@
           <div class="d-flex flex-column">
             <%= render "articles/preview", articles: @articles %>
           </div>
-          <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary mb-3" %>
+          <div class="text-center mt-4">
+            <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary mb-3" %>
+          </div>
         </div>
       </div>
     </div>
