--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -5,13 +5,14 @@
         <div class="card card-index mb-3 h-100">
           <%= cl_image_tag article.cover, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
           <div class="card-body">
-            <h5 class="card-title text-center mb-1"><%= article.title %></h5>
-            <p class="card-text text-center"><small class="text-muted">par <%= article.author.titleize %></small></p>
+            <div class="text-center mb-2">
+              <em class="text-muted minus"><%= article.created_at.strftime('%d %B %Y') %></em>
+            </div>
+            <h5 class="card-title mb-1"><b><%= article.title.upcase %></b></h5>
             <p class="card-text"><%= article.subtitle.truncate_words(15, omission: '...') %></p>
             <div class="counts counts-index d-flex justify-content-between align-items-center my-3">
-              <%= link_to "voir plus", article_path(article), class:"btn btn-link m" %>
               <p class="mx-3 text-muted"><%= pluralize(article.comments.count, "commentaire", "commentaires") %></p>
-              <p class="text-muted"><%= pluralize(article.likes.count, "like", "likes") %> </p>
+              <p class="text-muted"><%= article.likes.count%><i class="fas fa-heart red ml-2"></i> </p>
             </div>
           </div>
         </div>
@@ -19,5 +20,3 @@
     </div>
   <% end %>
 </div>
-
-
