--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,10 +5,12 @@
   <div class="wrapper down">
     <div class="container mt-5 pt-4">
 <% end %>
-    <div class="d-flex mb-4">
+    <h1 class="header text-primary text-center pt-5 mt-5 mb-5">Actualités</h1>
+    <div class="mb-4">
       <%= link_to "Créer un article", new_article_path, class:"btn btn-primary" %>
       <%= link_to "Retour", root_path, class:"btn btn-link" %>
     </div>
+    <span><b>Catégories :</b></span>
     <%= render "tag", tags: @tags %>
     <%= render 'articles', articles: @articles %>
     <%== pagy_bootstrap_nav(@pagy).html_safe %>
