--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,18 +1,35 @@
-<div class="wrapper">
-  <div class="container bg-white">
-    <div class="container-ekologeek  my-5 px-5 py-2">
-      <div class="my-5 d-md-flex d-flex-column justify-content-between align-items-center">
-        <h2 class="green-bg">Sujets</h2>
-        <div class="d-flex align-items-center my-2 m-md-0">
-          <%= link_to "Créer un sujet", new_topic_path, class:"btn btn-primary" %>
-          <%= link_to "Retour", root_path, class:"btn btn-link" %>
-        </div>
-
-      </div>
-      <div>
-        <%= render "preview", topics: @topics %>
-        <%== pagy_bootstrap_nav(@pagy).html_safe %>
-      </div>
+  <div class="wrapper">
+    <div class="container mt-5">
+    <h1 class="header text-primary text-center pt-5 mt-5 mb-5">forum</h1>
+    <div class="mb-4">
+      <%= link_to "Rédiger un message", new_topic_path, class:"btn btn-primary" %>
+      <%= link_to "Retour", root_path, class:"btn btn-link" %>
     </div>
+    <div class="row row-eq-height">
+      <% @topics.each do |topic| %>
+        <div class="col-12 col-sm-6 col-lg-4  article">
+          <%= link_to topic_path(topic) do %>
+            <div class="card card-index mb-3 h-100">
+              <% if topic.cover.present? %>
+                <%= cl_image_tag topic.cover, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
+              <% else %>
+                <%= image_tag 'default.jpg', class: "card-img-top" %>
+              <% end %>
+              <div class="card-body">
+                <div class="text-center">
+                  <span class="name m-0 text-blue"> <b><%= "#{topic.user.first_name.capitalize} #{topic.user.last_name.upcase}".truncate(18, omission: '...') %> </b> - <%= topic.user.company.name %> </span>
+                </div>
+                <div class="text-center mb-2">
+                  <em class="minus text-blue mr-2"><%= topic.created_at.strftime('%d %B %Y') %></em>
+                  <span class="topic-index-time text-blue ml-2"><i class="fas fa-comment-alt mr-1"></i><%= topic.answers.count %></span>
+                </div>
+                <p class="mb-0"><%= topic.content.truncate_words(15, omission: '...') %></p>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+    <%== pagy_bootstrap_nav(@pagy).html_safe %>
   </div>
 </div>
