page topic#show stylisée

--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,6 +1,5 @@
- <div class="form-comment mx-sm-5">
-  <%= simple_form_for([ topic, answer ], remote: true) do |f| %>
-  <%= f.input :content, label: "Réponse" %>
-  <%= f.submit "Répondre" %>
-  <% end %>
-</div>
+<%= simple_form_for([ topic, answer ], remote: true) do |f| %>
+  <%= f.input :content, label: false, placeholder: "Votre commentaire..." %>
+  <%= f.submit "Envoyer", class: 'btn btn-primary' %>
+<% end %>
+
