--- a/app/views/answers/_show.html.erb
+++ b/app/views/answers/_show.html.erb
@@ -1,17 +1,17 @@
-<div class="message my-3" data-answer-id="<%= answer.id %>">
-  <div class="message-name">
-    <p><%= answer.user.first_name.titleize %></p>
-    <em><%= answer.created_at.strftime('%D') %></em>
+<div class="col-12 col-sm-4 col-md-3" data-answer-id="<%= answer.id %>">
+  <div class="text-center green-bg mb-2">
+    <p class="name m-0"> <b><%= "#{answer.user.first_name.capitalize} #{answer.user.last_name.upcase}".truncate(19, omission: '...') %> </b></p>
+    <div class="time minus"><%= "#{time_ago_in_words answer.created_at} -  #{answer.user.company.name}".truncate(24, omission: '...') %></div>
   </div>
-  <div class="message-body mt-2">
-    <p>
-      <%= answer.content %>
-    </p>
-  </div>
-  <div class="message-status">
-    <% if answer.user == current_user %>
-      <%= link_to "Modifier", edit_answer_path(answer), class:"cool-link" %>
-      <%= link_to "Supprimer", answer_path(answer), method: :delete, remote: true, class:"cool-link" %>
-    <% end %>
+  <% if answer.user == current_user %>
+    <div class="d-flex justify-content-center mb-2">
+      <%= link_to "Modifier", edit_answer_path(answer), class:"tag mr-1" %>
+      <%= link_to "Supprimer", answer_path(answer), method: :delete, class:"tag ml-1" %>
+    </div>
+  <% end %>
+</div>
+<div class="col-12 col-sm-8 col-md-9">
+  <div class="card p-3 mb-3">
+    <%= answer.content %>
   </div>
 </div>
