nouveau slide carousel

--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -4,7 +4,7 @@
       <%= image_tag "vote.jpg", class:"d-block w-100", alt:"Second slide" %>
       <div class="carousel-caption">
         <div class="d-md-block">
-          <%= link_to "/soutenir", class:"btn btn-secondary text-white responsive-btn box" do %>
+          <%= link_to "https://www.harmonie-boost.fr/home/2059/projet/2657", class:"btn btn-secondary text-white responsive-btn box", target: :blank do %>
           <h5><b>Votez maintenant !</b></h5>
           <p class="mb-0">Soutenez le projet</p>
           <% end %>
