--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,5 +1,7 @@
 <%= simple_form_for([ topic, answer ], remote: true) do |f| %>
   <%= f.input :content, label: false, placeholder: "Votre commentaire..." %>
-  <%= f.submit "Envoyer", class: 'btn btn-primary' %>
+  <div class="d-flex justify-content-end">
+    <%= f.submit "Envoyer", class: 'btn btn-primary' %>
+  </div>
 <% end %>
 
