--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,8 @@
-<div class="form-comment mx-sm-5">
-  <%= simple_form_for([ article, comment ], remote: true) do |f| %>
-  <%= f.input :author, label: "Auteur" %>
-  <%= f.input :content, label: "Commentaire" %>
-  <%= f.submit "Commenter" %>
-  <% end %>
-</div>
+<%= simple_form_for([ article, comment ], remote: true) do |f| %>
+  <%= f.input :content, label: false, placeholder: "Votre commentaire..." %>
+  <%= f.input :author, label: false, placeholder: "Auteur" %>
+  <div class="d-flex justify-content-end">
+    <%= f.submit "Envoyer", class:"btn btn-primary" %>
+  </div>
+<% end %>
+
