--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -5,7 +5,7 @@ function refreshForm(innerHTML) {
 
 function addComment(commentHTML) {
   const comments = document.getElementById('comments');
-  comments.insertAdjacentHTML('beforeend', commentHTML);
+  comments.insertAdjacentHTML('beforebegin', commentHTML);
 }
 
 <% if @comment.errors.any? %>
