--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -8,7 +8,7 @@
             <div class="text-center mb-2">
               <em class="text-muted minus"><%= article.created_at.strftime('%d %B %Y') %></em>
             </div>
-            <h5 class="card-title mb-1"><b><%= article.title.upcase %></b></h5>
+            <h5 class="card-title mb-1"><b><%= article.title.upcase.truncate_words(5, omission: '...') %></b></h5>
             <p class="card-text"><%= article.subtitle.truncate_words(15, omission: '...') %></p>
             <div class="counts counts-index d-flex justify-content-between align-items-center my-3">
               <p class="mx-3 text-muted"><%= pluralize(article.comments.count, "commentaire", "commentaires") %></p>
