--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
 <% end %>
     <h1 class="header text-primary text-center pt-5 mt-5 mb-5">Actualités</h1>
     <div class="mb-4">
-      <%= link_to "Créer un article", new_article_path, class:"btn btn-primary" %>
+      <%= link_to "Créer un article", new_article_path, class:"btn btn-primary bold" %>
       <%= link_to "Retour", root_path, class:"btn btn-link" %>
     </div>
     <span><b>Catégories :</b></span>
