--- a/app/views/topics/_preview.html.erb
+++ b/app/views/topics/_preview.html.erb
@@ -1,16 +1,14 @@
 <% topics.each do |topic| %>
   <%= link_to topic_path(topic) do %>
-    <div class="topic-index mb-1 h-100">
-      <div class="pt-2 d-flex align-items-center justify-content-between">
+    <div class="topic-index mb-2 h-100">
+      <div class="pt-2 d-flex align-items-center ">
         <div class="topic-index-info">
-          <div>
-            <span class="name m-0"> <b><%= "#{topic.user.first_name.capitalize} #{topic.user.last_name.upcase}".truncate(18, omission: '...') %> </b></span>
-          </div>
-          <span class="topic-index-time"><%= time_ago_in_words topic.created_at %>, <%= topic.user.company.name %></span>
+          <b><%= "#{topic.user.first_name.capitalize} #{topic.user.last_name.upcase}".truncate(18, omission: '...') %></b>
+          <div class="topic-index-time"><%= time_ago_in_words topic.created_at %> - <%= topic.user.company.name %></div>
           <div class="topic-index-time"><i class="fas fa-comment-alt mr-1"></i><%= topic.answers.count %></div>
         </div>
         <div class="d-flex align-items-center justify-content-between card-content-topic">
-          <p class=" topic-index-text flex-grow text-muted"><%= topic.content.truncate_words(15, omission: '...') %></p>
+          <p class="topic-index-text flex-grow text-muted"><%= topic.content.truncate_words(15, omission: '...') %></p>
         </div>
       </div>
     </div>
