--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,8 +5,8 @@
   <div class="wrapper">
 <% end %>
   <div class="container">
-    <div class="container-ekologeek bg-white my-5 px-5 pb-5">
-       <h1 class="header text-primary text-center pt-5 mt-5 mb-5">actualités - article</h1>
+    <div class="container bg-white my-5 px-5 pb-5">
+      <h1 class="header text-primary text-center pt-5 mt-5 mb-5">actualités - article</h1>
       <div class="banner" style="background-image: url('<%= cl_image_path @article.cover, height: 300, width: 400, crop: :fit %>');"></div>
       <div class="d-flex justify-content-end align-items-center mt-3">
         <% if current_user && current_user.admin? %>
@@ -21,12 +21,12 @@
       </div>
       <div class="article">
         <h2 class="green-bg my-4"><%= @article.title %></h2>
-        <p><em><%= @article.created_at.strftime('%d %B %Y') %></em></p>
+        <p><em><%=  l(@article.created_at, format: :long) %></em></p>
         <p><%= sanitize @article.content %></p>
         <ul class='list-inline'>
           <li class="list-inline-item"><b>Catégories: </b></li>
           <% @article.tags.each do |tag| %>
-            <li class="list-inline-item tag"><%= tag %></li>
+            <li class="list-inline-item tag mx-2"><%= tag %></li>
           <% end %>
         </ul>
       </div>
@@ -52,18 +52,20 @@
 
       <hr/>
 
-      <h5 class="text-center bold my-5">COMMENTAIRES</h5>
+      <h5 class="text-center bold mb-3 mt-5">COMMENTAIRES</h5>
       <div class="row">
         <% @article.comments.each do |comment| %>
           <%= render 'comments/show', comment: comment %>
         <% end %>
-        <div id="comments">
-        </div>
+        <div id="comments"></div>
         <div class="col-12 offset-sm-4 offset-md-3 col-sm-8 col-md-9">
           <%= render 'comments/form', article: @article, comment: @comment %>
         </div>
       </div>
-      <%= link_to "Page Actualités", articles_path, class: "btn btn-primary" %>
+      <div class="text-center">
+
+        <%= link_to "Page Actualités", articles_path, class: "btn btn-primary bold" %>
+      </div>
     </div>
   </div>
 </div>
