--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -108,7 +108,7 @@
               <%= render "articles/preview", articles: @articles %>
             </div>
             <div class="text-center">
-              <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary my-3" %>
+              <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary my-3 bold" %>
             </div>
           </div>
         </div>
@@ -121,7 +121,7 @@
               <%= render "topics/preview", topics: @topics %>
             </div>
             <div class="text-center">
-              <%= link_to "Plus de sujets", topics_path, class:"btn btn-primary my-3" %>
+              <%= link_to "Plus de sujets", topics_path, class:"btn btn-primary my-3 bold" %>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
           <h2 class="green-bg my-4">Agenda</h2>
           <iframe src="https://www.billetweb.fr/multi_event.php?user=37189#shop" width="100%" height="500" frameborder="0" class="light-border"></iframe>
           <div class="text-center mt-3">
-            <%= link_to "Plus d'événements", "https://www.billetweb.fr/multi_event.php?user=37189#shop", target: :blank, class:"btn btn-primary mb-3" %>
+            <%= link_to "Plus d'événements", "https://www.billetweb.fr/multi_event.php?user=37189#shop", target: :blank, class:"btn btn-primary mb-3 bold" %>
           </div>
         </div>
 
@@ -137,7 +137,7 @@
           <h2 class="green-bg my-4">Documents</h2>
           <iframe src="https://drive.google.com/embeddedfolderview?id=17i-ruMNRs1u0KkALTVmV1_4uadurxvt9#list" width="100%" height="500" frameborder="0" class="light-border"></iframe>
           <div class="text-center mt-3">
-            <%= link_to "Ouvrir dans un nouvel onglet", "https://drive.google.com/embeddedfolderview?id=17i-ruMNRs1u0KkALTVmV1_4uadurxvt9#list", target: :blank, class:"btn btn-primary mb-3" %>
+            <%= link_to "Ouvrir dans un nouvel onglet", "https://drive.google.com/embeddedfolderview?id=17i-ruMNRs1u0KkALTVmV1_4uadurxvt9#list", target: :blank, class:"btn btn-primary mb-3 bold" %>
           </div>
         </div>
       </div>
