--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -1,16 +1,16 @@
 <div class="col-12 col-sm-4 col-md-3">
-  <div class="text-center green-bg mb-2 w-100">
-    <p class="name m-0"> <b><%= comment.author.upcase.truncate(19, omission: '...') %> </b></p>
+  <div class="green-bg mb-2 w-100">
+    <p class="name m-0"> <b><%= comment.user.first_name.upcase%> <%= comment.user.last_name.titleize.truncate(2, omission: '.')%> </b></p>
     <div class="time minus"><%= "#{time_ago_in_words comment.created_at} -  #{comment.user.company.name}".truncate(24, omission: '...') %></div>
   </div>
   <% if comment.user == current_user %>
-    <div class="d-flex justify-content-center mb-2">
-      <%= link_to "Modifier", edit_comment_path(comment), class:"tag mr-1" %>
-      <%= link_to "Supprimer", comment_path(comment), method: :delete, class:"tag ml-1" %>
+    <div class="d-flex justify-content-center mb-5 mt-2">
+      <%= link_to "Modifier", edit_comment_path(comment), class:"tag mr-1 bold" %>
+      <%= link_to "Supprimer", comment_path(comment), method: :delete, class:"tag ml-1 bold" %>
     </div>
   <% end %>
 </div>
-<div class="col-12 col-sm-8 col-md-9">
+<div class="col-12 col-sm-8 col-md-9 ">
   <div class="card p-3 mb-3">
     <%= comment.content %>
   </div>
