--- a/app/views/topics/_preview.html.erb
+++ b/app/views/topics/_preview.html.erb
@@ -5,7 +5,7 @@
         <div class="topic-index-info">
           <b><%= "#{topic.user.first_name.capitalize} #{topic.user.last_name.upcase}".truncate(18, omission: '...') %></b>
           <div class="topic-index-time"><%= time_ago_in_words topic.created_at %> - <%= topic.user.company.name %></div>
-          <div class="topic-index-time"><i class="fas fa-comment-alt mr-1"></i><%= topic.answers.count %></div>
+          <div class="topic-index-time"><i class="fas fa-comment-alt mr-1"></i><b><%= topic.answers.count %></b></div>
         </div>
         <div class="d-flex align-items-center justify-content-between card-content-topic">
           <p class="topic-index-text flex-grow text-muted"><%= topic.content.truncate_words(15, omission: '...') %></p>
