--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -17,11 +17,11 @@
               <% end %>
               <div class="card-body">
                 <div class="text-center">
-                  <span class="name m-0 text-blue"> <b><%= "#{topic.user.first_name.capitalize} #{topic.user.last_name.upcase}".truncate(18, omission: '...') %> </b> - <%= topic.user.company.name %> </span>
+                  <span class="name m-0 text-blue"> <b><%= "#{topic.user.first_name.capitalize} #{topic.user.last_name.upcase}".truncate(25, omission: '...') %> </b> - <%= topic.user.company.name %> </span>
                 </div>
                 <div class="text-center mb-2">
-                  <em class="minus text-blue mr-2"><%= topic.created_at.strftime('%d %B %Y') %></em>
-                  <span class="topic-index-time text-blue ml-2"><i class="fas fa-comment-alt mr-1"></i><%= topic.answers.count %></span>
+                  <em class="minus text-blue mr-2"><%= l(topic.created_at, format: :long ) %></em>
+                  <span class="topic-index-time text-blue minus ml-2"><i class="fas fa-comment-alt mr-1"></i><%= topic.answers.count %></span>
                 </div>
                 <p class="mb-0"><%= topic.content.truncate_words(15, omission: '...') %></p>
               </div>
