--- a/app/views/pages/documents.html.erb
+++ b/app/views/pages/documents.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper mt-5">
+<div class="wrapper my-5">
   <div class="container">
     <h1 class="header text-primary pt-5 text-center">DOCUMENTS</h1>
     <div class="h-100"><iframe src="https://drive.google.com/embeddedfolderview?id=17i-ruMNRs1u0KkALTVmV1_4uadurxvt9#list" width="100%" height="500" frameborder="0" class="light-border bg-white"></iframe>
