--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -1,7 +1,7 @@
 <div class="row row-eq-height">
   <% articles.each do |article| %>
     <div class="col-12 col-sm-6 col-lg-4  article">
-      <%= link_to article_path(article) do %>
+      <%= link_to article_path(article, articles: @articles.to_a) do %>
         <div class="card card-index mb-3 h-100">
           <% if article.cover.present? %>
             <%= cl_image_tag article.cover, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
