--- a/app/stylesheets/components/_banner.scss
+++ b/app/stylesheets/components/_banner.scss
@@ -2,6 +2,7 @@
   margin-top: 60px;
   width: 100%;
   height: 50vh;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
 }
