--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -70,8 +70,16 @@
         </div>
       </div>
       <div class="text-center">
+        <% if @article.prev %>
+          <%= link_to "précédent", article_path(@article.prev), class:"btn btn-link" %>
+        <% end %>
+
 
         <%= link_to "Page Actualités", articles_path, class: "btn btn-primary bold" %>
+
+        <% if @article.next %>
+          <%= link_to "suivant", article_path(@article.next), class:"btn btn-link" %>
+        <% end %>
 
       </div>
     </div>
