--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -69,7 +69,7 @@
               <h2 class="green-bg my-4">Actualités</h2>
             </div>
             <div class="d-flex flex-column">
-              <%= render "articles/preview", articles: @articles %>
+              <%= render "articles/preview", articles: Article.visibles.first(3) %>
             </div>
             <div class="text-center">
               <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary my-3 bold" %>
