--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -76,7 +76,7 @@
       <div class="col-12 col-lg-6 offset-lg-3">
         <div>
           <div class="d-flex flex-column">
-            <%= render "articles/preview", articles: @articles %>
+            <%= render "articles/preview", articles: Article.visibles_ext.first(3) %>
           </div>
           <div class="text-center mt-4">
             <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary mb-3" %>
