--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -72,21 +72,21 @@
       <% if user_signed_in? %>
         <div class="text-center">
           <% if @article.prev %>
-            <%= link_to "précédent", article_path(@article.prev), class:"btn btn-link" %>
+            <%= link_to "précédent", article_path(@article.prev), class:"cool-link" %>
           <% end %>
-          <%= link_to "Page Actualités", articles_path, class: "btn btn-primary bold" %>
+          <%= link_to "Page Actualités", articles_path, class: "btn btn-primary bold mx-3" %>
           <% if @article.next %>
-            <%= link_to "suivant", article_path(@article.next), class:"btn btn-link" %>
+            <%= link_to "suivant", article_path(@article.next), class:"cool-link" %>
           <% end %>
         </div>
       <% else %>
         <div class="text-center">
           <% if @article.prev_ext %>
-            <%= link_to "précédent", article_path(@article.prev_ext), class:"btn btn-link" %>
+            <%= link_to "précédent", article_path(@article.prev_ext), class:"cool-link" %>
           <% end %>
-          <%= link_to "Page Actualités", articles_path, class: "btn btn-primary bold" %>
+          <%= link_to "Page Actualités", articles_path, class: "btn btn-primary bold mx-3" %>
           <% if @article.next_ext %>
-            <%= link_to "suivant", article_path(@article.next_ext), class:"btn btn-link" %>
+            <%= link_to "suivant", article_path(@article.next_ext), class:"cool-link" %>
           <% end %>
         </div>
       <% end %>
