hover title preview article

--- a/app/stylesheets/components/_article-cards.scss
+++ b/app/stylesheets/components/_article-cards.scss
@@ -51,6 +51,9 @@
   padding: 0 15px;
   .card-article-title {
     color: $primary;
+    &:hover {
+      color: rgb(17, 115, 136);
+    }
   }
   a {
     text-decoration: none;
