--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -72,18 +72,15 @@
     <div>
       <h2 class="green-bg my-4">Actualités</h2>
     </div>
-    <div class="row">
-      <div class="col-12 col-lg-6 offset-lg-3">
-        <div>
-          <div class="d-flex flex-column">
-            <%= render "articles/preview", articles: Article.visibles_ext.first(3) %>
-          </div>
-          <div class="text-center mt-4">
-            <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary mb-3" %>
-          </div>
-        </div>
-      </div>
+    <div class="d-flex flex-column">
+      <%= render "articles/preview", articles: Article.visibles_ext.first(3) %>
     </div>
+    <div class="text-center mt-4">
+      <%= link_to "Plus d'actualités ", articles_path, class:"btn btn-primary mb-3 bold" %>
+    </div>
+
+
+
 
     <h2 class="my-5 header text-primary text-center">PARTENAIRES</h2>
     <div class="row d-flex text-align-center justify-content-center">
