--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -30,6 +30,8 @@
         </div>
       <% end %>
     </div>
-    <%== pagy_bootstrap_nav(@pagy).html_safe %>
+    <% if @pagy.count >= 10 %>
+      <%== pagy_bootstrap_nav(@pagy).html_safe %>
+    <% end %>
   </div>
 </div>
