--- a/app/stylesheets/components/_article-cards.scss
+++ b/app/stylesheets/components/_article-cards.scss
@@ -40,7 +40,10 @@
   }
   a {
     text-decoration: none;
-    color: black;
+    color: $primary;
+    &:hover {
+      color: rgb(17, 115, 136);
+    }
   }
 }
 .article-index {
