--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -2,7 +2,7 @@
     <div class="container mt-5">
     <h1 class="header text-primary text-center pt-5 mt-5 mb-5">forum</h1>
     <div class="mb-4">
-      <%= link_to "Rédiger un message", new_topic_path, class:"btn btn-primary" %>
+      <%= link_to "Rédiger un message", new_topic_path, class:"btn btn-primary bold" %>
       <%= link_to "Retour", root_path, class:"btn btn-link" %>
     </div>
     <div class="row row-eq-height">
