--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -62,7 +62,7 @@
           <div id="values"></div>
         <% end %>
       <% end %>
-      <div class="row">
+      <div class="row ">
         <div class="col-12 col-lg-6">
           <div>
             <div>
@@ -89,6 +89,8 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="row">
         <div class="col-12 col-lg-6">
           <h2 class="green-bg my-4">Agenda</h2>
           <iframe src="https://www.billetweb.fr/multi_event.php?user=37189#shop" width="100%" height="500" frameborder="0" class="light-border"></iframe>
@@ -96,7 +98,6 @@
             <%= link_to "Plus d'événements", "https://www.billetweb.fr/multi_event.php?user=37189#shop", target: :blank, class:"btn btn-primary mb-3 bold" %>
           </div>
         </div>
-
         <div class="col-12 col-lg-6">
           <h2 class="green-bg my-4">Documents</h2>
           <iframe src="https://drive.google.com/embeddedfolderview?id=17i-ruMNRs1u0KkALTVmV1_4uadurxvt9#list" width="100%" height="500" frameborder="0" class="light-border"></iframe>
@@ -104,6 +105,8 @@
             <%= link_to "Ouvrir dans un nouvel onglet", "https://drive.google.com/embeddedfolderview?id=17i-ruMNRs1u0KkALTVmV1_4uadurxvt9#list", target: :blank, class:"btn btn-primary mb-3 bold" %>
           </div>
         </div>
+      </div>
+
       </div>
     </div>
   </div>
