add field to article publish_date change date

--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -10,7 +10,11 @@
           <% end %>
           <div class="card-body">
             <div class="text-center mb-2">
-              <em class="text-muted article-date-texte"><%=l(article.created_at, format: :long )%></em>
+              <% if article.publish_date.present? %>
+                <em class="text-muted article-date-texte"><%=l(article.publish_date, format: :long )%></em>
+              <% else %>
+                <em class="text-muted article-date-texte"><%=l(article.created_at, format: :long )%></em>
+              <% end %>
             </div>
             <h5 class="card-title mb-1"><b><%= article.title.upcase.truncate_words(5, omission: '...') %></b></h5>
             <p class="card-text"><%= article.subtitle.truncate_words(15, omission: '...') %></p>
